# habits-py

./: .gitignore  LICENSE  README.md  api.py  choose-habits.py  config.json  config.py  create-habit.py  create_habit.py  date_adapter.py  export.py  first_run.py  functions.py  graphs.py  graphs_data.py  habits-template.json  habits.txt  main.py  metadata.json  pyproject.toml  reset.py  run_api.py  setup.py  track.py  track_habits.py
backend/config/: config.json  config.py
backend/habit_py/: create_habit.py  graphs.py  main.py
config/: config.json
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
habit_py/: export.py  setup.py  track.py
habit_py/utils/: functions.py
habitpy/: create_habit.py  export.py  graphs_data.py  habitpy.py  lab.py  manage_habits.py  reset.py  setup.py  track.py
habitpy/config/: config.py
habitpy/utils/: functions.py
utils/: cheers.py  date_adapter.py  functions.py
