[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habitpy"
version = "0.1.13"
description = "Track your habits from the terminal"
readme = "README.md"
license = "MIT"
authors = [{ name = "Sebastián Figueroa", email= "sebaj348@gmail.com" }]
requires-python= ">=3.11"
dependencies = [
    "pandas",
    "plotly",
    "platformdirs",
    "argcomplete==3.6.2",
    "attrs==25.3.0",
    "Brlapi==0.8.6",
    "btrfsutil==6.15",
    "cffi==1.17.1",
    "click==8.1.8",
    "cryptography==45.0.5",
    "dbus-python==1.4.0",
    "defusedxml==0.7.1",
    "distro==1.9.0",
    "filelock==3.18.0",
    "libtorrent==2.0.11",
    "louis==3.34.0",
    "netsnmp-python==1.0a1",
    "packaging==25.0",
    "pipx==1.7.1",
    "psutil==7.0.0",
    "pwquality==1.4.5",
    "pycairo==1.28.0",
    "pycparser==2.22",
    "PyGObject==3.52.3",
    "pyxdg==0.28",
    "PyYAML==6.0.2",
    "setproctitle==1.3.5",
    "toml==0.10.2",
    "userpath==1.9.2",
    "wheel==0.45.1"
]
[project.urls]
Repository = "https://github.com/asuntx/habitpy"
[project.scripts]
habitpy = "habitpy.habitpy:main"
