[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habitpy"
version = "0.1.14"
description = "Track your habits from the terminal"
readme = "README.md"
license = "MIT"
authors = [{ name = "Sebastián Figueroa", email= "sebaj348@gmail.com" }]
requires-python= ">=3.11"
dependencies = [
    "pandas",
    "plotly",
    "platformdirs"
]
[project.urls]
Repository = "https://github.com/asuntx/habitpy"
[project.scripts]
habitpy = "habitpy.habitpy:main"
